# torale

./: .cursorrules  .dockerignore  .env.example  .gcloudignore  .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CLOUDFLARE_SETUP.md  CONTRIBUTING.md  DEPLOYING.md  DEVELOPMENT.md  Dockerfile  MILESTONE-2-SUMMARY.md  MILESTONE-3-COMPLETE.md  Makefile  PR_REVIEW.md  README.md  SEO_CONTENT_STRATEGY.md  SETUP.md  SIMPLIFY_ISSUES.md  SLACK_SETUP.md  TESTING.md  agentic-plan-clarifications.md  agentic-plan.md  ambi-backend.py  ambi_alert.db  architecture-plan.md  cloudbuild-branch.yaml  cloudbuild.yaml  deploy.sh  docker-compose.yml  example.py  goals.md  helmfile.yaml  helmfile.yaml.gotmpl  investigation.md  justfile  manifest  mkdocs.yml  (+22 more)
.beads/: config.yaml  (+2 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  ambi_alert.db  docker-entrypoint.sh  mkdocs.yml  next-gen-plan.md  perplexity-example.py  pyproject.toml  run_api.py  test_email.py  test_webhook.py
backend/alembic/: env.py
backend/alembic/versions/: 0c195cb8b608_add_task_templates_table.py  189283387c51_add_extraction_schema_to_tasks.py  1ccec0168405_seed_task_templates.py  30d7793fb7d2_add_grounded_search_fields.py  3dcde9bea1b3_update_model_to_gemini_2_5_flash.py  40f825e86987_add_waitlist_table.py  42235af69f7d_add_webhook_secret_to_webhook_deliveries.py  44bd571210b1_create_oauth_integrations_table.py  5ba730c9c123_add_notifications_to_tasks.py  5c6d7e8f9a0b_deduplicate_task_names.py  5cc2c3800faa_add_first_name_to_users.py  64e7f3797d90_add_unique_constraint_user_task_name.py  7468642f6abd_add_notify_behavior_constraint_to_.py  79d49a430c3f_add_task_state_column.py  7e4bc3017b35_add_api_keys_table.py  82cdf3d44858_drop_stale_config_column.py  961f8ac4183a_add_state_changed_at_to_tasks.py  9aec4cc24632_add_creative_templates.py  9c8560c84dc8_convert_notifications_column_from_json_.py  9ca6877eba15_initial_schema_with_clerk.py  9ca6877eba15_migrate_users_to_clerk.py  9fb326d5f5a7_auto_verify_clerk_emails.py  a1b2c3d4e5f6_add_email_verification_and_webhooks.py  a1b2c3d4e5f6_add_shareable_tasks_and_usernames.py  a1b2c3d4e5f6_remove_task_slugs.py  a7b8c9d0e1f2_add_task_context.py  af3fbab7ddc8_migrate_notify_behavior_track_state.py  b2c3d4e5f6a7_auto_verify_clerk_emails.py  b2d4e7f89a10_add_user_connectors.py  b3a1f5e82c01_drop_condition_met_add_notification.py  bcb594440c88_add_retry_fields_and_retrying_status.py  c36fe95dcb98_add_last_execution_id_to_tasks.py  c4e2a9b71f03_drop_change_summary.py  c5e8f9d23b41_add_task_attached_connector_slugs.py  c9da50682126_initial_schema.py  d4e5f6a7b8c9_drop_notify_behavior.py  da72788361dd_next_run_replaces_schedule.py  e1f2a3b4c5d6_add_feed_query_index.py  e8f9a0b1c2d3_add_view_count_index.py  e95666a4cd0e_drop_pipeline_columns.py  (+4 more)
backend/app/: main.py  main_simple.py
backend/app/api/: alerts.py  dependencies.py  deps.py
backend/app/clients/: discovery_client.py  notification_client.py
backend/app/core/: config.py  constants.py  database.py  db.py  logging_config.py  supabase_client.py
backend/app/models/: __init__.py  alert.py  change_alert_model.py  content_embedding_model.py  monitored_source_model.py  scraped_content_model.py  user_query_model.py
backend/app/schemas/: alert.py  alert_schemas.py  content_schemas.py  monitoring_schemas.py  source_discovery_schemas.py  user_query_schemas.py
backend/app/services/: alert_service.py  change_detection_service.py  content_ingestion_service.py  embedding_service.py  monitor_service.py  notification_processor.py  notification_service.py  source_discovery_service.py  user_query_processing_service.py
backend/examples/: api_key_usage.py
backend/research/: README.md  compare_accuracy.py  debug_openai.py  dynamic_gt.py  harness.py  test_cases.py  test_dynamic_flow.py  test_harness_openai.py  test_openai_websearch.py  verify_token_tracking.py
backend/research/approaches/: gemini_grounded.py  openai_websearch.py  perplexity.py  weather_gt.py
backend/scripts/: cleanup_orphaned_schedules.py  manual_email_test.py  sample_tasks.sql  test_auto_verification.py  test_condition_met.py  test_grounded_search.sh  test_notifications.py  test_temporal_e2e.sh
backend/src/torale/: __init__.py
backend/static/: changelog.json
backend/tests/: CLAUDE.md  conftest.py  quick_test.py  test_429_fallback.py  test_activities.py  test_admin_endpoints.py  test_admin_role_management.py  test_agent.py  test_api_key_repository.py  test_auth_api_keys.py  test_cli_integration.py  test_deleted_task_handling.py  test_duplicate_prevention.py  test_email_verification.py  test_email_verification_endpoints.py  test_embedding_service.py  test_errors.py  test_executors.py  test_feed_endpoints.py  test_gemini_integration.py  test_job.py  test_manual_run_coordination.py  test_migrate.py  test_monitoring_api.py  test_monitoring_pipeline.py  test_monitoring_schemas.py  test_monitoring_workflow.py  test_notification_integration.py  test_novu_service.py  test_offline.py  test_perplexity_client.py  test_preview_endpoint.py  test_prompt_sanitizer.py  test_providers.py  test_retry_execution_id.py  test_scheduler.py  test_schema_sync.py  test_schemas.py  test_sdk_integration.py  test_shareable_tasks.py  (+12 more)
backend/tests/integration/: conftest.py  test_e2e.py  test_grounded_search.py  test_monitoring_pipeline_e2e.py  test_schedule.py  test_temporal_e2e.py
notification-service/: .env.example  DEPLOYMENT.md  Dockerfile  README.md  config.py  main.py  pyproject.toml  test_service.py
notification-service/api/: notifications.py
notification-service/clients/: notificationapi_client.py
notification-service/schemas/: notification_schemas.py
notification-service/services/: notification_processor.py  notification_service.py
torale-agent/: .dockerignore  .envrc  .mcp.json  CLAUDE.md  Dockerfile  README.md  a2a_error_propagation.py  agent.py  cli.py  models.py  prompts.py  pyproject.toml  server.py  tools.py
torale-agent/.claude/: settings.json
torale-agent/evals/: __init__.py  cases.jsonl  cases.yaml  dynamic.py  evaluators.py  models.py  runner.py  task.py
(+682 files in other folders)
