[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notification-service"
version = "0.1.0"
description = "Notification microservice for Torale - handles email and push notifications"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Torale Team", email = "team@torale.com" },
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic[email]>=2.7.4",
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "httpx>=0.27.0",
    "notificationapi-python-server-sdk>=2.0.0",
    "structlog>=25.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
    "black>=23.11.0",
]

[tool.uv]
managed = true
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["api", "clients", "services", "schemas"]
include = ["*.py"]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
