[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torale-agent"
version = "0.1.0"
description = "Torale monitoring agent"
requires-python = ">=3.11"
dependencies = [
    "fastharness>=0.2.1",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "ty",
]
