[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torale-agent"
version = "0.1.0"
description = "Torale monitoring agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai-slim[a2a,google]>=0.2.0",
    "mem0ai>=1.0.0",
    "perplexityai>=0.27.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "ty",
]
