[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torale-agent"
version = "0.1.0"
description = "Torale monitoring agent"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=0.3.22",
    "pydantic-ai-slim[google]>=0.2.0",
    "mem0ai>=1.0.0",
    "perplexityai>=0.27.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
    "logfire>=4.21.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "ty",
]
eval = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
torale-agent = "cli:app"
